--- a/app/src/main/res/layout/activity_info2.xml
+++ b/app/src/main/res/layout/activity_info2.xml
@@ -16,32 +16,44 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="35dp"
-        android:layout_marginTop="35dp"
-        android:fontFamily="@font/atitlegothic3"
-        android:text="HPV 백신 정보"
-        android:textColor="@color/backgroundGray"
-        android:textSize="30dp"
+    <ScrollView
+        android:layout_width="416dp"
+        android:layout_height="510dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <ExpandableListView
-        android:id="@+id/mylist"
-        android:background="@drawable/rectangle"
-        android:layout_width="377dp"
-        android:layout_height="432dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.529"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.5">
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-    </ExpandableListView>
+            <TextView
+                android:id="@+id/textView1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="40dp"
+                android:layout_marginTop="34dp"
+                android:fontFamily="@font/atitlegothic3"
+                android:text="HPV 백신 정보"
+                android:textColor="@color/backgroundGray"
+                android:textSize="30dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <ExpandableListView
+                android:id="@+id/mylist"
+                android:layout_width="392dp"
+                android:layout_height="575dp"
+                android:layout_marginStart="23dp"
+                android:layout_marginTop="18dp"
+                android:layout_marginEnd="23dp"
+                android:background="@drawable/rectangle"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView1">
+
+            </ExpandableListView>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
 
     <Button
         android:id="@+id/homeBtn3"
