--- a/app/src/main/res/layout/quest_add.xml
+++ b/app/src/main/res/layout/quest_add.xml
@@ -7,6 +7,7 @@
     tools:context=".QuestAdd">
 
     <ImageView
+        android:id="@+id/imageView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="top"
@@ -14,90 +15,99 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="27dp"
-        android:layout_height="27dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="38dp"
-        android:src="@drawable/arrow"
+    <ScrollView
+        android:layout_width="408dp"
+        android:layout_height="522dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="35dp"
-        android:fontFamily="@font/atitlegothic3"
-        android:text="자주묻는질문 추가하기"
-        android:textColor="@color/backgroundGray"
-        android:textSize="30dp"
-        app:layout_constraintStart_toEndOf="@+id/imageView"
-        app:layout_constraintTop_toTopOf="parent" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-    <View
-        android:id="@+id/view1"
-        android:layout_width="375dp"
-        android:layout_height="565dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="16dp"
-        android:background="@drawable/rectangle"
-        app:layout_constraintBottom_toTopOf="@+id/submitBtn"
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="27dp"
+                android:layout_height="27dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="37dp"
+                android:src="@drawable/arrow"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView1" />
+            <TextView
+                android:id="@+id/textView1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="34dp"
+                android:fontFamily="@font/atitlegothic3"
+                android:text="자주묻는질문 추가하기"
+                android:textColor="@color/backgroundGray"
+                android:textSize="30dp"
+                app:layout_constraintStart_toEndOf="@+id/imageView"
+                app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
-        android:id="@+id/titleAdd"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="32dp"
-        android:ems="10"
-        android:fontFamily="@font/atitlegothic3"
-        android:hint="제목을 입력하세요"
-        android:inputType="textPersonName"
-        android:textColor="@color/purple_700"
-        android:textColorHint="@color/purple_700"
-        android:textSize="17dp"
-        app:layout_constraintStart_toStartOf="@+id/view1"
-        app:layout_constraintTop_toTopOf="@+id/view1" />
+            <View
+                android:id="@+id/view1"
+                android:layout_width="359dp"
+                android:layout_height="642dp"
 
-    <EditText
-        android:id="@+id/contentAdd"
-        android:layout_width="303dp"
-        android:layout_height="106dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="24dp"
-        android:ems="10"
-        android:fontFamily="@font/atitlegothic2"
-        android:hint="미리보기 요약 내용을 입력하세요"
-        android:inputType="textPersonName"
-        android:textColor="@color/textColor"
-        android:textSize="12dp"
-        app:layout_constraintStart_toStartOf="@+id/view1"
-        app:layout_constraintTop_toBottomOf="@+id/titleAdd" />
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="20dp"
+                android:background="@drawable/rectangle"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView1" />
 
-    <EditText
-        android:id="@+id/detailAdd"
-        android:layout_width="300dp"
-        android:layout_height="329dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="24dp"
-        android:ems="10"
-        android:fontFamily="@font/atitlegothic2"
-        android:hint="자세한 내용을 입력하세요"
-        android:inputType="textPersonName"
-        android:textColor="@color/textColor"
-        android:textSize="12dp"
-        app:layout_constraintBottom_toBottomOf="@+id/view1"
-        app:layout_constraintStart_toStartOf="@+id/view1"
-        app:layout_constraintTop_toBottomOf="@+id/contentAdd" />
+            <EditText
+                android:id="@+id/titleAdd"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="28dp"
+                android:layout_marginTop="24dp"
+                android:ems="10"
+                android:fontFamily="@font/atitlegothic3"
+                android:hint="제목을 입력하세요"
+                android:inputType="textPersonName"
+                android:textColor="@color/purple_700"
+                android:textColorHint="@color/purple_700"
+                android:textSize="17dp"
+                app:layout_constraintStart_toStartOf="@+id/view1"
+                app:layout_constraintTop_toTopOf="@+id/view1" />
+
+            <EditText
+                android:id="@+id/contentAdd"
+                android:layout_width="303dp"
+                android:layout_height="106dp"
+                android:layout_marginTop="16dp"
+                android:ems="10"
+                android:fontFamily="@font/atitlegothic2"
+                android:hint="미리보기 요약 내용을 입력하세요"
+                android:inputType="textPersonName"
+                android:textColor="@color/textColor"
+                android:textSize="12dp"
+                app:layout_constraintEnd_toEndOf="@+id/view1"
+                app:layout_constraintStart_toStartOf="@+id/view1"
+                app:layout_constraintTop_toBottomOf="@+id/titleAdd" />
+
+            <EditText
+                android:id="@+id/detailAdd"
+                android:layout_width="296dp"
+                android:layout_height="413dp"
+                android:layout_marginTop="16dp"
+                android:ems="10"
+                android:fontFamily="@font/atitlegothic2"
+                android:hint="자세한 내용을 입력하세요"
+                android:inputType="textPersonName"
+                android:textColor="@color/textColor"
+                android:textSize="12dp"
+                app:layout_constraintEnd_toEndOf="@+id/view1"
+                app:layout_constraintStart_toStartOf="@+id/view1"
+                app:layout_constraintTop_toBottomOf="@+id/contentAdd" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
 
     <Button
         android:id="@+id/submitBtn"
